--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Produtos</title>
+    <link rel="stylesheet" href="static/style_320_portrait.css" media="(min-width: 320px) and (orientation: portrait)">
 </head>
 <body>
     <div class="cont_one">
