--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="cont_one">
-        <h1>CADASTRO DE PRODUTOS</h1>
+        <h1>PRODUTOS</h1>
         <form action="/cad_pro" method="post">
             <div class="cont_sec">
-                <input type="text" name="codigo" id="idcodigo">
-                <input type="text" name="descricao" id="iddescricao">
-                <input type="text" name="preco" id="idpreco">
-                <input type="text" name="quantidade" id="idquantidade">
+                <input type="text" name="codigo" id="idcodigo" placeholder="Código">
+                <input type="text" name="descricao" id="iddescricao" placeholder="Descrição">
+                <input type="text" name="preco" id="idpreco" placeholder="Preço">
+                <input type="text" name="quantidade" id="idquantidade" placeholder="QTDE.">
             </div>
             <div class="cont_ter">
                 <input type="submit" value="Cadastrar">
