--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Cliente</title>
+    <title>Cadastro de Vendas</title>
     <link rel="stylesheet" href="static/style_320_portrait.css" media="(min-width: 320px) and (orientation: portrait)">
 </head>
 <body>
     <div class="cont_one">
-        <h1>CLIENTES</h1>
-        <form action="/cad_cli" method="post">
+        <h1>BEM-VINDO</h1>
+        <h3>Cadastro de Vendas</h3>
+        <form action="/cad_venda" method="post">
             <div class="cont_sec">
-                <input type="text" name="cod_cli" id="idcod_cli" placeholder="ID.">
-                <input type="text" name="nome" id="idnome" placeholder="Nome">
-                <input type="text" name="sobrenome" id="idsobrenome" placeholder="Sobrenome">
-                <input type="text" name="endereco" id="idendereco" placeholder="Endereço">
-                <input type="text" name="telefone" id="idtelefone" placeholder="Telefone">
+                <input type="text" name="cod" id="idcod" placeholder="Código da Venda">
+                <input type="text" name="cliente" id="idcliente" placeholder="Cliente">
+                <input type="text" name="cod_pro" id="idcod_pro" placeholder="Código do Produto">
+                <input type="text" name="produto" id="idproduto" placeholder="Descrição">
+                <input type="text" name="preco" id="idpreco" placeholder="Preço">
+                <input type="text" name="quantidade" id="idquantidade" placeholder="QTDE.">
+                <input type="text" name="total" id="idtotal" placeholder="Total">
             </div>
             <div class="cont_ter">
                 <input type="submit" value="Cadastrar">
