--- a/index.html
+++ b/index.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Vendas</title>
+    <link rel="stylesheet" href="static/style_home_320_portrait.css" media="(min-width: 320px) and (orientation: portrait)">
     <link rel="stylesheet" href="static/style_320_portrait.css" media="(min-width: 320px) and (orientation: portrait)">
 </head>
 <body>
     <div class="cont_one">
-        <h1>BEM-VINDO</h1>
-        <h3>Cadastro de Vendas</h3>
-        <form action="/cad_venda" method="post">
-            <div class="cont_sec">
-                <input type="text" name="cod" id="idcod" placeholder="Código da Venda">
-                <input type="text" name="cliente" id="idcliente" placeholder="Cliente">
-                <input type="text" name="cod_pro" id="idcod_pro" placeholder="Código do Produto">
-                <input type="text" name="produto" id="idproduto" placeholder="Descrição">
-                <input type="text" name="preco" id="idpreco" placeholder="Preço">
-                <input type="text" name="quantidade" id="idquantidade" placeholder="QTDE.">
-                <input type="text" name="total" id="idtotal" placeholder="Total">
-            </div>
-            <div class="cont_ter">
-                <input type="submit" value="Cadastrar">
-            </div>
-        </form>
+        <h1>SkillTECK</h1>
+        <h3>Supermercado</h3>
+        <div class="cont_sec">
+            <ul>
+                <li>
+                    <a href="#">
+                        <div class="button button-3">
+                            <span>Cadastro de Produtos</span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="button button-3">
+                            <span>Cadastro de Produtos</span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="button button-3">
+                            <span>Cadastro de Produtos</span>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
