--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
         <div class="cont_sec">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="templates/cad_vendas.html">
                         <div class="button button-3">
-                            <span>Cadastro de Produtos</span>
+                            <span>Cadastro de Vendas</span>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="templates/cad_clientes.html">
                         <div class="button button-3">
-                            <span>Cadastro de Produtos</span>
+                            <span>Cadastro de Clientes</span>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="templates/cad_produtos.html">
                         <div class="button button-3">
                             <span>Cadastro de Produtos</span>
                         </div>
